--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,13 +1,13 @@
+
 .header{
-    width: 80%;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-start;
-    align-content: flex-start;
-    float: right;
-    gap: 20px;
-    height: 1000px;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 30px;
+    margin-top: 5px;
+    /* margin-left: 50px; */
 
 }
 .search-div{
@@ -57,4 +57,48 @@
     height: 30px;
     border-radius: 200px;
     background-color: #E7E7E7;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: center;
+    gap: 10px;
+}
+.pp{
+    width: 30px;
+    height: 30px;
+}
+.jailan{
+    font-size: 10px;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    font-family: poppins;
+}
+.line{
+    width: 630px;
+    color: #D0D0D0;
+}
+.line-div{
+    margin-top: 30px;
+}
+.dashboard-text{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+    text-align: left;
+    font-size: 16px;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    font-family: poppins;
+}
+.d-div{
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+    text-align: left;
+    width: 73%;
+    margin-top: 10px;
+
 }
