--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -5,7 +5,8 @@
     position: fixed;
 
     top: 0;
-    
+    left: 0;
+    z-index: 1000;
 
 }
 .logo-div{
@@ -45,7 +46,7 @@
     gap: 10px;
     margin-left: 20px;
     background-color: white;    
-    width: 160px;
+    width: 153px;
     height: 30px;
     border-radius: 20px 0px 0px 20px;
 }
