--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -80,6 +80,7 @@
     font-weight: 300;
     color: rgb(255, 255, 255);
     font-family: poppins;
+    text-decoration: none;
 }
 .icon-small{
     width: 14px;
