--- a/src/Pages/Categories.css
+++ b/src/Pages/Categories.css
@@ -15,6 +15,7 @@ body{
     justify-content: center;
     align-items: center;
     align-content: center;
+    height: 1370px;
 }
 .insights-row{
     display: flex;
