--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -156,3 +156,35 @@
     transform: translateY(-9px) rotate(-45deg);
   }
   
+
+
+.dropdown-btn .icon {
+    margin-right: 10px;
+}
+
+.dropdown-menu {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    /* background: #1a1a1a; */
+    display: none;
+    border-left: 3px solid #fff;
+}
+
+.dropdown-menu li a {
+    display: block;
+    color: #b3b3b3;
+    padding: 8px 16px;
+    text-decoration: none;
+    font-size: 12px;
+}
+
+.dropdown-menu li a:hover {
+    background: #333;
+    color: #fff;
+}
+
+/* Show dropdown on hover */
+.menu-item:hover .dropdown-menu {
+    display: block;
+}
