--- a/src/Components/ProjectNav.css
+++ b/src/Components/ProjectNav.css
@@ -63,8 +63,8 @@
     height: 18px;
     margin-left: 10px;
 }
-.text-black{
-    font-size: 10px;
+.text-black-3{
+    font-size: 9px;
     font-weight: bold;
     color: rgb(0, 0, 0);
     font-family: poppins;
