--- a/src/Pages/Projectdetails.css
+++ b/src/Pages/Projectdetails.css
@@ -11,14 +11,37 @@
 .first-box-22{
     background-color: #E7E7E7;
     width: 620px;
-    height: 190px;
+    height: 460px;
     border-radius: 10px;
     margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 20px;
+
+}
+.rowww-2{
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     align-content: center;
     gap: 140px;
+
+}
+.first-box-23{
+    background-color: #E7E7E7;
+    width: 620px;
+    height: 890px;
+    border-radius: 10px;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 20px;
 
 }
