--- a/src/Components/ShortFill.css
+++ b/src/Components/ShortFill.css
@@ -12,13 +12,13 @@
     color: black;
     font-family: poppins;
 }
-.fill-box{
+.fill-box-00{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     align-content: center; 
-    width: 220px;
+    width: 260px;
     height: 25px;
     background-color: white;
     border-radius: 5px;
