--- a/src/Pages/Profile.css
+++ b/src/Pages/Profile.css
@@ -11,7 +11,7 @@
     font-weight: 500;
     color: rgb(0, 0, 0);
     font-family: poppins;
-    margin-left: 20px;
+    margin-left: 15px;
     margin-top: 20px;
 
 }
@@ -67,4 +67,21 @@
     border-radius: 10px;
     margin-top: 20px;
     gap: 20px;
+}
+.what-i-do-div{
+    background-color: #E7E7E7;
+    width: 620px;
+    height: 890px;
+    border-radius: 10px;
+    margin-top: 20px;
+    gap: 20px;
+}
+.projectt-text{
+    font-size: 12px;
+    font-weight: 500;
+    color: rgb(0, 0, 0);
+    font-family: poppins;
+    margin-right:540px;
+    margin-top: 20px;
+
 }
