--- a/src/Pages/Profile.css
+++ b/src/Pages/Profile.css
@@ -71,7 +71,7 @@
 .what-i-do-div{
     background-color: #E7E7E7;
     width: 620px;
-    height: 890px;
+    height: 920px;
     border-radius: 10px;
     margin-top: 20px;
     gap: 20px;
@@ -84,4 +84,12 @@
     margin-right:540px;
     margin-top: 20px;
 
+}
+.rowww-45{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 20px;
 }
