--- a/src/Pages/Profile.css
+++ b/src/Pages/Profile.css
@@ -1,7 +1,7 @@
 .perosnal-div{
     background-color: #E7E7E7;
     width: 620px;
-    height: 490px;
+    height: 480px;
     border-radius: 10px;
     margin-top: 10px;
     gap: 20px;
@@ -49,7 +49,7 @@
     align-items: center;
     align-content: center;
     gap: 70px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 .all-c{
     display: flex;
@@ -63,7 +63,7 @@
 .aboutt-div{
     background-color: #E7E7E7;
     width: 620px;
-    height: 390px;
+    height: 370px;
     border-radius: 10px;
     margin-top: 20px;
     gap: 20px;
@@ -71,7 +71,7 @@
 .what-i-do-div{
     background-color: #E7E7E7;
     width: 620px;
-    height: 920px;
+    height: 900px;
     border-radius: 10px;
     margin-top: 20px;
     gap: 20px;
@@ -92,4 +92,68 @@
     align-items: center;
     align-content: center;
     gap: 20px;
+}
+.contact-me-div{
+    background-color: #E7E7E7;
+    width: 620px;
+    height: 920px;
+    border-radius: 10px;
+    margin-top: 20px;
+    gap: 20px;
+}
+.up-div-row{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 10px;
+
+}
+.iconn-text{
+    font-size: 12px;
+    font-weight: 500;
+    color: rgb(0, 0, 0);
+}
+.rowww-46{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+.sociall-text{
+    font-size: 14px;
+    font-weight: 500;
+    color: rgb(0, 0, 0);
+    font-family: poppins;
+    margin-top: 20px;
+}
+.margin-left-1{
+    margin-right: 60px;
+}
+.margin-left-2{
+    margin-left: 160px;
+}
+.co{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+}
+.share-icon{
+    font-size: 12px;
+    font-weight: 500;
+    color: rgb(0, 0, 0);
+    margin-right: 160px;
+
+}
+.rowww-47{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 110px;
 }
