--- a/src/Pages/Profile.css
+++ b/src/Pages/Profile.css
@@ -96,7 +96,7 @@
 .contact-me-div{
     background-color: #E7E7E7;
     width: 620px;
-    height: 920px;
+    height: 640px;
     border-radius: 10px;
     margin-top: 20px;
     gap: 20px;
@@ -128,6 +128,7 @@
     color: rgb(0, 0, 0);
     font-family: poppins;
     margin-top: 20px;
+    margin-right: 510px;
 }
 .margin-left-1{
     margin-right: 60px;
@@ -156,4 +157,19 @@
     align-items: center;
     align-content: center;
     gap: 110px;
+}
+.ro{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 10px;
+    margin-right: 400px;
+
+}
+.icon-t{
+    font-size: 12px;
+    font-weight: 500;
+    color: rgb(0, 0, 0);
 }
