Home-Page-css-edit

--- a/src/Pages/Profile.css
+++ b/src/Pages/Profile.css
@@ -93,7 +93,7 @@
     align-content: center;
     gap: 20px;
 }
-.contact-me-div{
+.contact-me-div-22{
     background-color: #E7E7E7;
     width: 620px;
     height: 640px;
