--- a/src/Pages/ProjectManagement.css
+++ b/src/Pages/ProjectManagement.css
@@ -98,6 +98,7 @@ body{
     font-weight: 600;
     color: rgb(255, 255, 255);
     font-family: poppins;
+    text-decoration: none;
 }
 .add{
     width: 20px;
